k8s/base/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-active
  namespace: petclinic
spec:
  selector:
    app: petclinic
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
